 * Add `hooks.register_temporarily` utility function for testing hooks (Karl Hobley. Sponsored by the Mozilla Foundation)
 * Fix: Make page-level actions accessible to keyboard users in page listing tables (Jesse Menn)
 * Fix: `WAGTAILFRONTENDCACHE_LANGUAGES` was being interpreted incorrectly. It now accepts a list of strings, as documented (Karl Hobley)

2.10 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~~

 * Added Django 3.1 support (Matt Westcott, Karl Hobley)
 * Removed support for Python 3.5
 * Implemented configurable moderation workflow (Jacob Topp-Mugglestone, Karl Hobley, Matt Westcott, Dan Braghis)
 * Implemented phrase searching and structured search query expressions (Karl Hobley)
 * Add ability to import redirects from an uploaded file (CSV, TSV, XLS, and XLSX) (Martin Sandström)
 * Added `webpquality` and `format-webp-lossless` image filters and `WAGTAILIMAGES_WEBP_QUALITY` setting (Nikolay Lukyanov)
 * Reorganised Dockerfile in project template to follow best practices (Tomasz Knapik, Jannik Wempe)
 * Added filtering to locked pages report (Karl Hobley)
 * Adds ability to view a group's users via standalone admin URL and a link to this on the group edit view (Karran Besen)
 * Redirect to previous url when deleting/copying/unpublish a page and modify this url via the relevant hooks (Ascani Carlo)
 * Added `next_url` keyword argument on `register_page_listing_buttons` and `register_page_listing_more_buttons` hooks (Ascani Carlo, Matt Westcott, LB (Ben Johnston))
 * `AbstractEmailForm` will use `SHORT_DATETIME_FORMAT` and `SHORT_DATE_FORMAT` Django settings to format date/time values in email (Haydn Greatnews)
 * `AbstractEmailForm` now has a separate method (`render_email`) to build up email content on submission emails (Haydn Greatnews)
 * Add `pre_page_move` and `post_page_move` signals (Andy Babic)
 * Add ability to sort search promotions on listing page (Chris Ranjana, LB (Ben Johnston))