@@ -24,6 +24,7 @@ Bug fixes
 
  * Make page-level actions accessible to keyboard users in page listing tables (Jesse Menn)
  * ``WAGTAILFRONTENDCACHE_LANGUAGES`` was being interpreted incorrectly. It now accepts a list of strings, as documented (Karl Hobley)
+ * Update oEmbed endpoints to use https where available (Matt Westcott)
 
 
 Upgrade considerations
